        removed ports.open
          (http://www.packetfence.org/mantis/view.php?id=464)
        removed services.nessusd
          (http://www.packetfence.org/mantis/view.php?id=473)
        removed status/rss.php
          (http://www.packetfence.org/mantis/view.php?id=479)
        removed harvard references
          (http://www.packetfence.org/mantis/view.php?id=478)

1.7.5
        pfsetvlan should check that MAC field is filled before
          calling custom_isClientAlive
          (http://www.packetfence.org/mantis/view.php?id=444)
        add executables used in installer.pl to dependencies 
          in packetfence.spec
          (http://www.packetfence.org/mantis/view.php?id=445)
        CGI session should contain authentication type used
          (http://www.packetfence.org/mantis/view.php?id=447)
        support for stacked Nortel BayStack5520
          (http://www.packetfence.org/mantis/view.php?id=448)
        support for Enterasys::SecureStack C2
        moved DHCP fingerprint update from configurator.pl
          to installer.pl
        added oui update to installer.pl
          (http://www.packetfence.org/mantis/view.php?id=446)
        unified _setVlan code between different modules
          (http://www.packetfence.org/mantis/view.php?id=449)
        missing return false in templates/register.html
          (http://www.packetfence.org/mantis/view.php?id=450)
        closelocationlogonstop default value should be disabled
          (http://www.packetfence.org/mantis/view.php?id=452)
        auth-aliases are not needed any more
          (http://www.packetfence.org/mantis/view.php?id=451)
        removed external2 from reg-detect-vlan.conf
          (http://www.packetfence.org/mantis/view.php?id=453)
        removed reference to local.conf from installer.pl
          (http://www.packetfence.org/mantis/view.php?id=455)
        fixed OUI and fingerprint updates in installer.pl
          (http://www.packetfence.org/mantis/view.php?id=454)