@@ -432,13 +432,6 @@ description=<<EOT
 Port the administrative interface listens on.
 EOT
 
-[ports.allowed]
-type=text
-description=<<EOT
-Ports allowed through the PacketFence system regardless of registration or violation status.  It is not necessary to define 
-53/udp is DNS servers are defined as passthroughs are automagically added.
-EOT
-
 [ports.redirect]
 type=text
 description=<<EOT
