@@ -74,7 +74,6 @@ form of:
 which would allow full IP to all 512 destination addresses.
 <p><b>[ports]</b><br>
   <a href='ports.html#admin'>admin</a><br>
-  <a href='ports.html#allowed'>allowed</a><br>
   <a href='ports.html#listeners'>listeners</a><br>
   <a href='ports.html#redirect'>redirect</a><br>
 <p><b>[proxies]</b><br>
