@@ -10,11 +10,6 @@
 <b>admin</b> <i>(text)</i><br>
 Default: 1443<br>
 Port the administrative interface listens on.<p>
-<a name=allowed></a>
-<b>allowed</b> <i>(text)</i><br>
-Default: <br>
-Ports allowed through the PacketFence system regardless of registration or violation status.  It is not necessary to define 
-53/udp is DNS servers are defined as passthroughs are automagically added.<p>
 <a name=listeners></a>
 <b>listeners</b> <i>(multi)</i><br>
 Default: <br>
